# Cataclysm-BN

./: .astylerc  .clang-tidy  .clangd  .editorconfig  .emmyrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Cataclysm-test-vcpkg-static-Debug-x64.exp  Cataclysm-vcpkg-static-Debug-x64.exp  CataclysmWin.cbp  ISSUES.md  LICENSE-GPL  LICENSE.txt  Makefile  README.ja.md  README.ko.md  README.md  TASKS.md  TODO.md  abandoned_textile_mill.json  abandoned_textile_mill_a.json  abandoned_textile_mill_b.json  activity_actor.cpp  activity_handlers.cpp  cataclysm-launcher  changelog.json  cmake_uninstall.cmake.in  deno.jsonc  dprint.json  grab.cpp  handle_action.cpp  import_map.json  item.cpp  item.h  (+20 more)
cata_rust/: CMakeLists.txt  Cargo.toml  build.rs
cata_rust/src/: lib.rs  url_utility.rs
data/: CMakeLists.txt  changelog.txt
data/XDG/: io.github.cataclysmbnteam.Cataclysm-BN.desktop  io.github.cataclysmbnteam.Cataclysm-BN.metainfo.xml  org.cataclysmbn.CataclysmBN.desktop  org.cataclysmbn.CataclysmBN.metainfo.xml
data/core/: basic.json  tips.json
data/credits/: en.credits  ja.credits  ru.credits
data/help/: texts.json
data/json/: LOADING_ORDER.md  achievements.json  ammo_effects.json  ammo_effects_simple.json  anatomy.json  ascii_arts.json  bionics.json  body_parts.json  clothing_mods.json  construction.json  construction_category.json  construction_group.json  construction_sequence.json  debug_spells.json  deconstruction.json  default_blacklist.json  dreams.json  effects.json  emit.json  enchantments.json  field_type.json  flags.json  flags_mutation.json  game_balance.json  gates.json  harvest.json  harvest_decay.json  item_actions.json  item_category.json  legacy_artifact_active.json  legacy_artifact_passive.json  loot_zones.json  martialarts.json  martialarts_fictional.json  materials.json  monster_attacks.json  monster_factions.json  morale_types.json  not_really_obsolete.json  obsolete.json  (+25 more)
data/json/artifact/: premade_artifacts.json
data/json/construction/: construct.json  construct_deco.json  construct_dig.json  construct_farm_wood.json  construct_furn.json  construct_other.json  construct_reinforce.json  construct_repair.json  construct_windows.json  construct_workshop.json
data/json/external_tileset/: AFS_external.json  External Tileset Info.md  External_Tileset_DP_Normal.json  External_Tileset_DP_Tall.json  External_Tileset_DP_eyes.json  External_Tileset_DP_maptiles.json  README.md  cats.json  (+5 more)
data/lua/: README.md
data/mods/: default.json  replacements.json
data/motd/: de.motd  en.motd  es_AR.motd  it_IT.motd  ja.motd  ko.motd  pt_BR.motd  ru.motd  zh_CN.motd  zh_TW.motd
data/names/: en.json  ja.json  ko.json  ru.json  zh_CN.json  zh_TW.json
data/raw/: colors.json  docgen_common.lua  generate_docs.lua  generate_types.lua  keybindings.json  languages.json  on_game_start.lua  tips.json
data/xdg/: com.cataclysmdda.cataclysm-dda.appdata.xml  com.cataclysmdda.cataclysm-dda.desktop
lang/: CMakeLists.txt  bn_extract_json_strings.sh  compile_mo.sh  concat_pot_files.py  dedup_pot_file.py  extract_json_strings.py  extract_mod_strings.bat  extract_mod_strings.sh  unicode_check.py  update_pot.sh
src/: Android.mk  CMakeLists.txt  SetupLibrary.cmake  achievement.cpp  achievement.h  action.cpp  action.h  active_item_cache.cpp  active_item_cache.h  active_tile_data.cpp  active_tile_data.h  active_tile_data_def.h  activity_actor.cpp  activity_actor.h  activity_actor_definitions.h  activity_handlers.cpp  activity_handlers.h  activity_item_handling.cpp  activity_speed.cpp  activity_speed.h  activity_speed_adapters.cpp  activity_speed_adapters.h  activity_type.cpp  activity_type.h  addiction.cpp  addiction.h  advanced_inv.cpp  advanced_inv.h  advanced_inv_area.cpp  advanced_inv_area.h  advanced_inv_listitem.cpp  advanced_inv_listitem.h  advanced_inv_pane.cpp  advanced_inv_pane.h  all_enum_values.h  ammo.cpp  ammo.h  ammo_effect.cpp  ammo_effect.h  anatomy.cpp  (+808 more)
src/chkjson/: CMakeLists.txt
src/lua/: CMakeLists.txt  LICENSE.md  README.md  lundump.c
src/sol/: CMakeLists.txt  changes.txt  config.hpp  forward.hpp  sol.hpp
tests/: CMakeLists.txt  Makefile  active_item_cache_test.cpp  algo_test.cpp  assertion_helpers.h  basecamp_test.cpp  behavior_test.cpp  bionics_test.cpp  calendar_test.cpp  cata_libintl_test.cpp  cata_utility_test.cpp  cata_variant_test.cpp  catacharset_test.cpp  catalua_test.cpp  char_biometrics_test.cpp  char_edible_rating_test.cpp  char_healing_test.cpp  char_stamina_test.cpp  char_validity_check_test.cpp  colony_list_test_helpers.cpp  colony_list_test_helpers.h  colony_test.cpp  comestible_test.cpp  consumption_test.cpp  consumption_test.h  coordinate_test.cpp  crafting_test.cpp  creature_in_field_test.cpp  creature_test.cpp  cube_direction_test.cpp  data_vars.cpp  decision_table_utils_test.cpp  dependency_tree_test.cpp  distribution_test.cpp  drop_token_test.cpp  effective_dps_test.cpp  effects_test.cpp  electric_grid_test.cpp  enchantment_test.cpp  encumbrance_test.cpp  (+123 more)
tests/catch/: catch.hpp
tests/data/: item_factory.json
tests/lua/: called_cpp_func_throws.lua  called_error_on_cpp_side.lua  called_error_on_lua_side.lua  called_from_cpp_test.lua  class_members_test.lua  global_functions_test.lua  id_conversions.lua  id_conversions_no_int_id.lua  regression_sol_1444.lua  runtime_error.lua  units_test.lua
tests/pch/: tests-pch.hpp
tools/clang-tidy-plugin/: CMakeLists.txt  CataTidyModule.cpp  CombineLocalsIntoPointCheck.cpp  HeaderGuardCheck.cpp  JsonTranslationInputCheck.cpp  NoLongCheck.cpp  NoStaticGettextCheck.cpp  NoStaticGettextCheck.h  NoStaticTranslationCheck.cpp  SimplifyPointConstructorsCheck.cpp  TestFilenameCheck.cpp  TextStyleCheck.cpp  TranslateStringLiteralCheck.cpp  TranslatorCommentsCheck.cpp  TranslatorCommentsCheck.h  UnusedStaticsCheck.cpp  UnusedStaticsCheck.h  UseLocalizedSortingCheck.cpp  UseNamedPointConstantsCheck.cpp  UsePointArithmeticCheck.cpp  Utils.cpp  Utils.h
tools/format/: CMakeLists.txt  format.cpp  json_formatter.exp
(+4567 files in other folders)
