[package]
name = "cata_rust"
version = "0.1.0"
edition = "2021"
authors = ["scarf"]
license-file = "LICENSE"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.110"
url = "2.5.0"
webbrowser = "0.8.12"

[build-dependencies]
cxx-build = "1.0.110"
miette = { version = "5.10.0", features = ["fancy"] }
